--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -2,10 +2,20 @@
   background:var(--gray-700);
   display: flex;
   justify-content: center;
+  margin: 0 auto;
 }
 
-header > img {
+.logo{
+  margin-right: -2rem;
+  width: 7rem;
+  height: auto;
   padding-top: 4.5rem;
   padding-bottom: 5rem;
-  margin: 0 auto;
+}
+
+.title {
+  width: 8rem;
+  height: auto;
+  padding-top: 4.5rem;
+  padding-bottom: 5rem;
 }
